--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,16 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.example.partyplanner'
+
+    buildscript {
+        repositories {
+            google()
+        }
+        dependencies {
+            classpath("androidx.navigation:navigation-safe-args-gradle-plugin:1.4.31")
+        }
+    }
 }
 
 dependencies {
@@ -54,6 +64,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.3.5'
+
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -61,6 +75,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
 
 }
