--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,21 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'com.google.firebase.firebase-perf'
+    id 'dagger.hilt.android.plugin'
+    id "com.ncorti.ktfmt.gradle" version "0.10.0"
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.partyplanner"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -25,6 +31,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "environment"
+    productFlavors {
+        dev
+        staging
+        prod
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -36,7 +48,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.3.1"
     }
     packagingOptions {
         resources {
@@ -44,36 +56,56 @@ android {
         }
     }
     namespace 'com.example.partyplanner'
+}
 
-    buildscript {
-        repositories {
-            google()
-        }
-        dependencies {
-            classpath("androidx.navigation:navigation-safe-args-gradle-plugin:1.4.31")
-        }
-    }
+ktfmt {
+    googleStyle()
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.3.5'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0-rc02'
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha01"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'com.google.dagger:hilt-android:2.43.2'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    kapt 'com.google.dagger:hilt-compiler:2.43.2'
 
-    //Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation 'com.google.firebase:firebase-config-ktx'
+
+    testImplementation 'junit:junit:4.+'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.43.2"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.43.2'
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 
+}
+
+kapt {
+    correctErrorTypes = true
 }
