--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
 
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     //Firebase
