--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation "androidx.activity:activity-ktx:1.6.0-alpha05"
 
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
 
