--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.43.2'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.0.2'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     implementation "androidx.activity:activity-ktx:1.6.0-alpha05"
 
