--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.+'
 
+    //Maven javax
+    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.43.2"
