--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-config-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
+    implementation("io.coil-kt:coil-compose:2.2.2")
 
     testImplementation 'junit:junit:4.+'
 
