--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:<latest-version>'
     //Maven javax
-    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+    implementation("javax.mail:mail:1.4")
+
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
